Added datetime picker commponent.

--- a/component/forms/common/fields/multi-select.html
+++ b/component/forms/common/fields/multi-select.html
@@ -1,10 +1,10 @@
-<ui-select name="{{field.name}}" id="{{field.name}}" multiple ng-model="field.value"
+<ui-select name="{{field.name}}" id="{{field.name}}" multiple ng-model="field.value" ng-disabled="{{fieldDisabled}}"
            ui-select-required="getRequired(field)" close-on-select="true" title="{{field.title}}">
     <ui-select-match placeholder="{{field.placeholder}}">
-        {{getSelectTitleFieldValue(field, $item)}}
+        {{getSelectFieldTitleValue(field, $item)}}
     </ui-select-match>
     <ui-select-choices repeat="element in field.options | filter:$select.search | limitTo: field.limitTo">
-        <div ng-bind-html="getSelectTitleFieldValue(field, element) | highlight: $select.search"></div>
+        <div ng-bind-html="getSelectFieldTitleValue(field, element) | highlight: $select.search"></div>
         <!--<small ng-bind-html="vm.getSelectTitleField(param, element) | highlight: $select.search"></small>-->
         <!--{{vm.getSelectTitleField(param, element)}}-->
     </ui-select-choices>
