--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -4,7 +4,7 @@
     </div>
     <!-- /.box-header -->
     <!-- form start -->
-    <form name="{{schema.name}}" role="form" novalidate ng-submit="save()" show-validation>
+    <form name="{{schema.name}}" role="form" novalidate show-validation ng-submit="save()">
         <div class="box-body padding-top">
             <div class="alert alert-success" ng-show="success">
                 <strong>Success! </strong>{{message}}
