--- a/component/forms/toolbar/components/component.html
+++ b/component/forms/toolbar/components/component.html
@@ -3,7 +3,7 @@
         <div class="btn-toolbar btn-toolbar-right">
             <button class="btn btn-default btn-xs btn-primary" type="button" ng-click="vm.addSection(component)"
                     title="Add this field.">
-                <span class="fa fa-plus"></span>
+                <span class="fa fa-hand-pointer-o"></span>
             </button>
         </div>
     </div>
