--- a/component/forms/toolbar/components/input.html
+++ b/component/forms/toolbar/components/input.html
@@ -1,2 +1,2 @@
-<label class="control-label" for="{{component.name}}">{{component.label}}</label>
+<div ng-include="'forms/toolbar/components/label.html'"></div>
 <input class="form-control" name="{{component.name}}" id="{{component.name}}"/>
