--- a/component/forms/toolbar/toolbar.html
+++ b/component/forms/toolbar/toolbar.html
@@ -1,4 +1,4 @@
-<div class="toolbar-container box-solid">
+<div class="toolbar-container box-solid" bs-affix data-offset-top="10" data-offset-bottom="0">
     <div class="box-header with-border">
         <h3 class="box-title">{{vm.toolbar.title}}</h3>
     </div>
