--- a/component/forms/common/fields/toggle.html
+++ b/component/forms/common/fields/toggle.html
@@ -1,3 +1,3 @@
 <br ng-if="field.ln"/>
 <toggle name="{{field.name}}" id="{{field.name}}" on="{{field.on}}" off="{{field.off}}"
-        ng-model="col.field.value"></toggle>
+        ng-model="field.value"></toggle>
