--- a/component/forms/schema/components/no-field-properties.html
+++ b/component/forms/schema/components/no-field-properties.html
@@ -1,4 +1,4 @@
 <div>
     <h4>Field properties error</h4>
-    <div style="padding: 5px;">Please fix this field properties: {{field.name}}</div>
+    <div style="padding: 5px;">Please fix this field properties: {{field.name}}, Type: {{field.type}}</div>
 </div>
