--- a/component/forms/schema/components/select/select-options-properties.html
+++ b/component/forms/schema/components/select/select-options-properties.html
@@ -1,3 +1,13 @@
+<div class="row no-vertical-margin">
+    <div class="form-group margin-bottom">
+        <label for="limitTo" class="col-sm-2 control-label">Limit to:</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="limitTo" name="limitTo"
+                   placeholder="Limit list to..." ng-model="field.limitTo"
+                   ng-required="false">
+        </div>
+    </div>
+</div>
 <table class="table table-condensed position-relative" style="position: relative;">
     <thead>
     <tr>
