--- a/component/forms/schema/components/textarea/textarea.html
+++ b/component/forms/schema/components/textarea/textarea.html
@@ -1,4 +1,4 @@
-<label class="control-label" for="{{field.name}}">{{field.label}}</label>
+<div ng-include="'forms/schema/components/label.html'"></div>
 <textarea class="form-control" name="{{field.name}}" id="{{field.name}}" ng-required="{{field.required}}"
           title="{{field.tooltip}}" rows="{{field.rows}}" placeholder="{{field.placeholder}}" ng-model="field.value">
 </textarea>
