--- a/component/forms/toolbar/components/multi-select.html
+++ b/component/forms/toolbar/components/multi-select.html
@@ -1,4 +1,4 @@
 <div ng-include="'forms/toolbar/components/label.html'"></div>
 <select name="{{component.name}}" id="{{component.name}}" class="form-control">
-    <option value="1">Option 1...</option>
+    <option value="1">Option 1, 2, 3...</option>
 </select>
