--- a/component/forms/toolbar/components/textarea.html
+++ b/component/forms/toolbar/components/textarea.html
@@ -1,4 +1,4 @@
-<label class="control-label" for="{{component.name}}">{{component.label}}</label>
+<div ng-include="'forms/toolbar/components/label.html'"></div>
 <textarea class="form-control" name="{{component.name}}" id="{{component.name}}"
           rows="{{component.rows}}" placeholder="{{component.placeholder}}">
 </textarea>
