--- a/component/forms/toolbar/field-to-delete.html
+++ b/component/forms/toolbar/field-to-delete.html
@@ -2,13 +2,9 @@
     <div class="btn-toolbar btn-toolbar-right">
         <button class="btn btn-default btn-xs btn-primary" type="button" ng-click="vm.addField(field)"
                 title="Add this field.">
-            <span class="fa fa-plus"></span>
+            <span class="fa fa-hand-pointer-o"></span>
         </button>
     </div>
 </div>
-<!--<div fg-field="template"-->
-<!--fg-tab-index="-1"-->
-<!--fg-no-validation-summary="true"-->
-<!--fg-edit-mode="true"></div>-->
 <label class="control-label" for="{{field.name}}">{{field.title}}</label>
 <input class="form-control" name="{{field.name}}" id="{{field.name}}"/>
