--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -25,7 +25,7 @@
                                      ng-class="{'has-error': {{schema.name}}.{{field.name}}.$invalid}">
 
                                     <label class="control-label" for="{{field.name}}"
-                                           ng-hide="vm.hideTitle(field)">{{field.label}}</label>
+                                           ng-hide="vm.hideTitle(field)">{{field.label}}&nbsp;</label>
 
                                     <ng-include src="getFormFieldTemplate(field.type)"></ng-include>
 
