Downgrade angular version to 1.5.8

--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -1,5 +1,5 @@
 <div class="box box-primary">
-    <div class="box-header with-border">
+    <div class="form-header with-border">
         <h3 class="box-title" ng-bind-html="schema.label"></h3>
     </div>
     <!-- /.box-header -->
