Fixed styles errors in forms component.

--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -211,7 +211,7 @@
 .tab-content {
   border: 1px solid #ddd;
   border-width: 0 1px 1px; /* Removes the top border */
-  padding: 1px;
+  //padding: 1px;
 }
 
 .nav-tabs > li {
