--- a/component/address/address-dialog.html
+++ b/component/address/address-dialog.html
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label class="control-label" for="field_street">Street</label>
-                    <input type="text" class="form-control" name="street" id="field_street"
+                    <input type="text" class="form-control" name="street" id="field_street" ng-required="true"
                            ng-model="vm.address.street" placeholder="Street..." tabindex="2"/>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label class="control-label" for="field_city">City</label>
-                            <input type="text" class="form-control" name="city" id="field_city"
+                            <input type="text" class="form-control" name="city" id="field_city" ng-required="true"
                                    ng-model="vm.address.city" placeholder="City..." tabindex="4"/>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                             <div class="form-group">
                                 <label class="control-label" for="field_country">Country</label>
                                 <select class="form-control" id="field_country" name="country"
-                                        ng-model="vm.address.state.country" tabindex="7"
+                                        ng-model="vm.address.state.country" tabindex="7" ng-required="true"
                                         ng-options="country as country.name for country in vm.countries track by country.code">
                                     <option value="" disabled hidden>Country...</option>
                                 </select>
@@ -82,13 +82,13 @@
                         <div class="form-group">
                             <label class="control-label" for="field_zipCode">Zip</label>
                             <input type="text" class="form-control" name="zipCode" id="field_zipCode"
-                                   ng-model="vm.address.zip" placeholder="ZIP" tabindex="6"/>
+                                   ng-model="vm.address.zip" placeholder="ZIP" tabindex="6" ng-required="true"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <label class="control-label" for="field_state">State</label>
                         <select class="form-control" id="field_state" name="state"
-                                ng-model="vm.address.state" tabindex="5"
+                                ng-model="vm.address.state" tabindex="5" ng-required="true"
                                 ng-options="state as state.name for state in vm.states | filter:{country:vm.address.state.country} track by state.code">
                             <option value="" disabled hidden>State...</option>
                         </select>
@@ -100,7 +100,7 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="control-label" for="field_email">Email</label>
-                            <input type="text" class="form-control" name="email" id="field_email"
+                            <input type="text" class="form-control" name="email" id="field_email" ng-required="true"
                                    ng-model="vm.address.email" placeholder="Email..." tabindex="11"/>
                         </div>
                     </div>
