--- a/component/forms/schema/components/field/field.html
+++ b/component/forms/schema/components/field/field.html
@@ -1,25 +1,37 @@
 <div class="box-draggable" ng-class="{ 'error': object.invalid}">
     <div class="box-overlay">
         <div class="btn-toolbar btn-toolbar-right">
+            <!--We have two settings button if it is popover or not-->
             <button class="btn btn-default btn-xs" type="button"
+                    ng-hide="popoverProps"
                     ng-disabled="field.displayProperties && field.invalid"
                     ng-class="{ 'active': field.showProperties }"
                     ng-click="toggleFieldProperties(field)"
                     title="Configure this field.">
                 <span class="fa fa-wrench"></span>
             </button>
+            <button class="btn btn-default btn-xs" type="button"
+                    ng-show="popoverProps"
+                    ng-disabled="field.displayProperties && field.invalid"
+                    ng-class="{ 'active': field.showProperties }"
+                    title="Configure this field."
+                    uib-popover-template="'forms/schema/components/field/properties.html'"
+                    popover-append-to-body='true' popover-placement='auto bottom'
+                    popover-trigger="outsideClick" popover-title="Field config">
+                <span class="fa fa-wrench"></span>
+            </button>
             <!--<button class="btn btn-default btn-xs" type="button"-->
-                    <!--ng-click="swap(index - 1, index)"-->
-                    <!--ng-disabled="index === 0" title="Move up">-->
-                <!--<span class="fa fa-arrow-left"></span>-->
+            <!--ng-click="swap(index - 1, index)"-->
+            <!--ng-disabled="index === 0" title="Move up">-->
+            <!--<span class="fa fa-arrow-left"></span>-->
             <!--</button>-->
             <!--<button class="btn btn-default btn-xs" type="button"-->
-                    <!--ng-click="swap(index, index + 1)"-->
-                    <!--ng-disabled="$index === schema.fields.length - 1" title="Move down">-->
-                <!--<span class="fa fa-arrow-right"></span>-->
+            <!--ng-click="swap(index, index + 1)"-->
+            <!--ng-disabled="$index === schema.fields.length - 1" title="Move down">-->
+            <!--<span class="fa fa-arrow-right"></span>-->
             <!--</button>-->
-            <button class="btn btn-default btn-xs btn-danger" type="button"
-                    ng-click="removeField(index)" title="Remove">
+            <button class="btn btn-default btn-xs btn-danger" type="button" title="Remove"
+                    ng-click="removeField(index)">
                 <span class="fa fa-trash"></span>
             </button>
         </div>
@@ -31,7 +43,7 @@
     </div>
     <div class="box-properties-container" ng-class="{ visible: field.showProperties }">
         <div class="padding">
-            <div ng-include="getSchemaFieldProperties(field)"></div>
+            <div ng-include="'forms/schema/components/field/properties.html'"></div>
         </div>
     </div>
 </div>
