Added layout to table field.

--- a/component/forms/schema/plugins/table/table-properties.html
+++ b/component/forms/schema/plugins/table/table-properties.html
@@ -18,7 +18,7 @@
             </div>
         </form>
     </uib-tab>
-    <uib-tab index="1" heading="Layout properties">
+    <uib-tab index="1" heading="Layout">
         <ods-table-props field="field"></ods-table-props>
     </uib-tab>
     <uib-tab index="2" heading="Debug" ng-show="debugMode">
