--- a/component/forms/toolbar/plugins/table.html
+++ b/component/forms/toolbar/plugins/table.html
@@ -8,7 +8,7 @@
     <!--</thead>-->
     <tbody>
         <tr ng-repeat="row in component.matrix">
-            <td ng-repeat="col in row">{{col}}</td>
+            <td ng-repeat="col in row">{{col.name}}</td>
         </tr>
     </tbody>
 </table>
