Added columns totals.

--- a/component/forms/schema/plugins/table/table-properties.html
+++ b/component/forms/schema/plugins/table/table-properties.html
@@ -22,6 +22,6 @@
         <ods-table-props field="field"></ods-table-props>
     </uib-tab>
     <uib-tab index="2" heading="Debug" ng-show="debugMode">
-        <ods-model model="field"></ods-model>
+        <ods-model model="field" css-class="fixed-height"></ods-model>
     </uib-tab>
 </uib-tabset>
