--- a/component/forms/schema/plugins/table/table-props.html
+++ b/component/forms/schema/plugins/table/table-props.html
@@ -1,32 +1,42 @@
 <form name="fieldPropsForm" class="form-horizontal">
     <div class="box-body padding-top">
         <div class="row no-vertical-margin">
-            <div class="form-group margin-bottom"
-                 ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
-                <label for="totals" class="col-sm-4 control-label">Show Totals:</label>
-                <div class="col-sm-8">
+            <div class="col-lg-3">
+                <div class="form-group"
+                     ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
+                    <label for="totals" class="control-label">Show Totals:</label>
                     <input type="checkbox" id="totals" name="totals"
                            ng-model="field.totals">
                 </div>
             </div>
-        </div>
-        <div class="row no-vertical-margin">
-            <div class="form-group margin-bottom"
-                 ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
-                <label for="deleteRows" class="col-sm-4 control-label">Delete rows:</label>
-                <div class="col-sm-8">
-                    <input type="checkbox" id="deleteRows" name="deleteRows"
-                           ng-model="field.deleteRows">
+            <div class="col-lg-3">
+                <div class="row no-vertical-margin">
+                    <div class="form-group"
+                         ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
+                        <label for="deleteRows" class="control-label">Delete rows:</label>
+                        <input type="checkbox" id="deleteRows" name="deleteRows"
+                               ng-model="field.deleteRows">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row no-vertical-margin">
-            <div class="form-group margin-bottom"
-                 ng-class="{'has-error': fieldPropsForm.deleteColumns.$invalid}">
-                <label for="deleteColumns" class="col-sm-4 control-label">Delete columns:</label>
-                <div class="col-sm-8">
-                    <input type="checkbox" id="deleteColumns" name="deleteColumns"
-                           ng-model="field.deleteColumns">
+            <div class="col-lg-3">
+                <div class="row no-vertical-margin">
+                    <div class="form-group"
+                         ng-class="{'has-error': fieldPropsForm.deleteColumns.$invalid}">
+                        <label for="deleteColumns" class="control-label">Delete columns:</label>
+                        <input type="checkbox" id="deleteColumns" name="deleteColumns"
+                               ng-model="field.deleteColumns">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="row no-vertical-margin">
+                    <div class="form-group"
+                         ng-class="{'has-error': fieldPropsForm.canClone.$invalid}">
+                        <label for="canClone" class="control-label">Can clone row:</label>
+                        <input type="checkbox" id="canClone" name="canClone"
+                               ng-model="field.canCloneRow">
+                    </div>
                 </div>
             </div>
         </div>
@@ -50,7 +60,7 @@
             <div class="form-group margin-bottom"
                  ng-class="{'has-error': fieldPropsForm.cols.$invalid}">
                 <label for="cols" class="col-sm-4 control-label">Cols:</label>
-                <div class="col-sm-6">
+                <div class="col-lg-6">
                     <input type="number" class="form-control" id="cols" name="cols"
                            placeholder="Cols..." ng-model="field.matrix[0].length"
                            ng-required="false" ng-disabled="true">
@@ -67,7 +77,7 @@
             <div class="form-group margin-bottom"
                  ng-class="{'has-error': fieldPropsForm.col{{$index}}.$invalid}">
                 <label for="col{{$index}}" class="col-sm-4 control-label">Column {{$index + 1}} width:</label>
-                <div class="col-sm-6">
+                <div class="col-lg-2">
                     <input type="text" class="form-control" id="col{{$index}}" name="col{{$index}}"
                            placeholder="Width..." ng-model="field.matrix[0][$index].width">
                 </div>
@@ -75,6 +85,10 @@
                     <label for="total{{$index}}" class="control-label">Total:</label>
                     <input type="checkbox" id="total{{$index}}" name="total{{$index}}" title="Add total to this column"
                            ng-model="col.total">
+                </div>
+                <div class="col-lg-4">
+                    <input type="text" class="form-control" id="totalLabel{{$index}}" name="totalLabel{{$index}}"
+                           placeholder="Total label..." ng-model="field.matrix[0][$index].totalLabel">
                 </div>
             </div>
         </div>
