--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -1,5 +1,9 @@
 
 
+.table-td {
+  vertical-align: middle !important;
+}
+
 .popover{
   max-width: 100%; // Max Width of the popover (depending on the container!)
 }
