--- a/component/forms/schema/plugins/table/table-props.html
+++ b/component/forms/schema/plugins/table/table-props.html
@@ -1,97 +1,113 @@
-<form name="fieldPropsForm" class="form-horizontal">
-    <div class="box-body padding-top">
-        <div class="row no-vertical-margin">
-            <div class="col-lg-3">
-                <div class="form-group"
-                     ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
-                    <label for="totals" class="control-label">Show Totals:</label>
-                    <input type="checkbox" id="totals" name="totals"
+<div class="container padding-top">
+    <div class="row">
+        <form name="fieldPropsForm" class="form-horizontal">
+            <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.rows.$invalid}">
+                    <label for="rows" class="control-label col-sm-5">Rows:</label>
+                    <div class="col-sm-3">
+                        <input type="number" class="form-control" id="rows" name="rows"
+                               placeholder="Rows..." ng-model="field.matrix.length"
+                               ng-required="false" ng-disabled="true">
+                    </div>
+                    <div class="col-sm-3">
+                        <button type="button" class="btn btn-primary" ng-click="addRow()" title="Add row">
+                            Add
+                        </button>
+                    </div>
+                </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.cols.$invalid}">
+                    <label for="cols" class="control-label col-sm-5">Cols:</label>
+                    <div class="col-lg-3">
+                        <input type="number" class="form-control" id="cols" name="cols"
+                               placeholder="Cols..." ng-model="field.matrix[0].length"
+                               ng-required="false" ng-disabled="true">
+                    </div>
+                    <div class="col-lg-3">
+                        <button type="button" class="btn btn-primary" ng-click="addColumn()" title="Add column">
+                            Add
+                        </button>
+                    </div>
+                </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.totals.$invalid}">
+                    <label for="rowHeader" class="control-label col-sm-5">Row Header:</label>
+                    <input class="col-sm-1" type="checkbox" id="rowHeader" name="rowHeader"
+                           ng-model="field.rowHeader">
+                </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.canClone.$invalid}">
+                    <label for="colHeader" class="control-label col-sm-5">Col Header:</label>
+                    <input class="col-sm-1" type="checkbox" id="colHeader" name="colHeader"
+                           ng-model="field.colHeader">
+                </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.totals.$invalid}">
+                    <label for="totals" class="control-label col-sm-5">Show Totals:</label>
+                    <input class="col-sm-1" type="checkbox" id="totals" name="totals"
                            ng-model="field.totals">
                 </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.canClone.$invalid}">
+                    <label for="canClone" class="control-label col-sm-5">Can clone row:</label>
+                    <input class="col-sm-1" type="checkbox" id="canClone" name="canClone"
+                           ng-model="field.canCloneRow">
+                </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
+                    <label for="deleteRows" class="control-label col-sm-5">Delete rows:</label>
+                    <input class="col-sm-1" type="checkbox" id="deleteRows" name="deleteRows"
+                           ng-model="field.deleteRows">
+                </div>
+                <div class="form-group" ng-class="{'has-error': fieldPropsForm.deleteColumns.$invalid}">
+                    <label for="deleteColumns" class="control-label col-sm-5">Delete columns:</label>
+                    <input class="col-sm-1" type="checkbox" id="deleteColumns" name="deleteColumns"
+                           ng-model="field.deleteColumns">
+                </div>
             </div>
-            <div class="col-lg-3">
-                <div class="row no-vertical-margin">
-                    <div class="form-group"
-                         ng-class="{'has-error': fieldPropsForm.deleteRows.$invalid}">
-                        <label for="deleteRows" class="control-label">Delete rows:</label>
-                        <input type="checkbox" id="deleteRows" name="deleteRows"
-                               ng-model="field.deleteRows">
+            <div class="col-md-8 col-sm-8 col-xs-12">
+                <div ng-repeat="col in field.matrix[0]">
+                    <div class="form-group" ng-class="{'has-error': fieldPropsForm.col{{$index}}.$invalid}">
+                        <label for="col{{$index}}" class="col-sm-3 control-label">Col{{$index + 1}} CSS class:</label>
+                        <div class="col-lg-2">
+                            <input type="text" class="form-control" id="col{{$index}}" name="col{{$index}}"
+                                   placeholder="Css class..." ng-model="field.matrix[0][$index].cssClass">
+                        </div>
+                        <div class="col-lg-2">
+                            <label for="total{{$index}}" class="control-label">Total:</label>
+                            <input type="checkbox" id="total{{$index}}" name="total{{$index}}"
+                                   title="Add total to this column" ng-model="col.total">
+                        </div>
+                        <label for="totalLabel{{$index}}" class="col-lg-2 control-label">Label:</label>
+                        <div class="col-lg-2">
+                            <input type="text" class="form-control" id="totalLabel{{$index}}"
+                                   name="totalLabel{{$index}}" placeholder="Total label..."
+                                   ng-model="field.matrix[0][$index].totalLabel">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3">
-                <div class="row no-vertical-margin">
-                    <div class="form-group"
-                         ng-class="{'has-error': fieldPropsForm.deleteColumns.$invalid}">
-                        <label for="deleteColumns" class="control-label">Delete columns:</label>
-                        <input type="checkbox" id="deleteColumns" name="deleteColumns"
-                               ng-model="field.deleteColumns">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="row no-vertical-margin">
-                    <div class="form-group"
-                         ng-class="{'has-error': fieldPropsForm.canClone.$invalid}">
-                        <label for="canClone" class="control-label">Can clone row:</label>
-                        <input type="checkbox" id="canClone" name="canClone"
-                               ng-model="field.canCloneRow">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row no-vertical-margin">
-            <div class="form-group margin-bottom"
-                 ng-class="{'has-error': fieldPropsForm.rows.$invalid}">
-                <label for="rows" class="col-sm-4 control-label">Rows:</label>
-                <div class="col-sm-6">
-                    <input type="number" class="form-control" id="rows" name="rows"
-                           placeholder="Rows..." ng-model="field.matrix.length"
-                           ng-required="false" ng-disabled="true">
-                </div>
-                <div class="col-lg-2">
-                    <button type="button" class="btn btn-primary" ng-click="addRow()" title="Add row">
-                        Add
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="row no-vertical-margin">
-            <div class="form-group margin-bottom"
-                 ng-class="{'has-error': fieldPropsForm.cols.$invalid}">
-                <label for="cols" class="col-sm-4 control-label">Cols:</label>
-                <div class="col-lg-6">
-                    <input type="number" class="form-control" id="cols" name="cols"
-                           placeholder="Cols..." ng-model="field.matrix[0].length"
-                           ng-required="false" ng-disabled="true">
-                </div>
-                <div class="col-lg-2">
-                    <button type="button" class="btn btn-primary" ng-click="addColumn()" title="Add column">
-                        Add
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-vertical-margin" ng-repeat="col in field.matrix[0]">
-            <div class="form-group margin-bottom"
-                 ng-class="{'has-error': fieldPropsForm.col{{$index}}.$invalid}">
-                <label for="col{{$index}}" class="col-sm-4 control-label">Column {{$index + 1}} width:</label>
-                <div class="col-lg-2">
-                    <input type="text" class="form-control" id="col{{$index}}" name="col{{$index}}"
-                           placeholder="Width..." ng-model="field.matrix[0][$index].width">
-                </div>
-                <div class="col-lg-2">
-                    <label for="total{{$index}}" class="control-label">Total:</label>
-                    <input type="checkbox" id="total{{$index}}" name="total{{$index}}" title="Add total to this column"
-                           ng-model="col.total">
-                </div>
-                <div class="col-lg-4">
-                    <input type="text" class="form-control" id="totalLabel{{$index}}" name="totalLabel{{$index}}"
-                           placeholder="Total label..." ng-model="field.matrix[0][$index].totalLabel">
-                </div>
-            </div>
-        </div>
-
+        </form>
     </div>
-</form>
+</div>
+
+
+<!--<form name="fieldPropsForm" class="form-horizontal">-->
+<!--<div class="box-body padding-top">-->
+<!--<div class="row no-vertical-margin" ng-repeat="col in field.matrix[0]">-->
+<!--<div class="form-group margin-bottom"-->
+<!--ng-class="{'has-error': fieldPropsForm.col{{$index}}.$invalid}">-->
+<!--<label for="col{{$index}}" class="col-sm-4 control-label">Col{{$index + 1}} CSS class:</label>-->
+<!--<div class="col-lg-2">-->
+<!--<input type="text" class="form-control" id="col{{$index}}" name="col{{$index}}"-->
+<!--placeholder="Css class..." ng-model="field.matrix[0][$index].cssClass">-->
+<!--</div>-->
+<!--<div class="col-lg-1">-->
+<!--<label for="total{{$index}}" class="control-label">Total:</label>-->
+<!--<input type="checkbox" id="total{{$index}}" name="total{{$index}}" title="Add total to this column"-->
+<!--ng-model="col.total">-->
+<!--</div>-->
+<!--<label for="totalLabel{{$index}}" class="col-lg-1 control-label">Label:</label>-->
+<!--<div class="col-lg-2">-->
+<!--<input type="text" class="form-control" id="totalLabel{{$index}}" name="totalLabel{{$index}}"-->
+<!--placeholder="Total label..." ng-model="field.matrix[0][$index].totalLabel">-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--</div>-->
+<!--</form>-->
