Fixed datetime error and finished saveData in formService.

--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -68,12 +68,12 @@
                 </div>
             </div>
         </div>
-        <div class="box-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
-                <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Clear</span>
+        <div class="box-footer" ng-show="schema.handleSubmit">
+            <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="clear()">
+                <span class="fa fa-trash-o"></span>&nbsp;<span>Clear</span>
             </button>
             <button type="submit" ng-disabled="{{schema.name}}.$invalid" class="btn btn-primary">
-                <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
+                <span class="fa fa-save"></span>&nbsp;<span>Save</span>
             </button>
         </div>
     </form>
