--- a/component/forms/form-info/form-info.html
+++ b/component/forms/form-info/form-info.html
@@ -27,5 +27,27 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="form-group" ng-class="{'has-error': formSchema.description.$invalid}">
+                    <label class="control-label" for="description">Form description</label>
+                    <textarea class="form-control" name="description" id="description"
+                              ng-model="schema.description" ng-required="false"
+                              rows="3" placeholder="Type form description...">
+                    </textarea>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="form-group" ng-class="{'has-error': formSchema.handleSubmit.$invalid}">
+                    <label class="control-label" for="handleSubmit">Handle submit internally: &nbsp;</label>
+                    <input type="checkbox" name="handleSubmit" id="handleSubmit"
+                           ng-model="schema.handleSubmit" ng-required="false"
+                           title="Specify if submit is handle by form (in this case you must to specify submit callback) or externally">
+                    </input>
+                </div>
+            </div>
+        </div>
     </div>
 </form>
