--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -65,12 +65,14 @@
 
 .box-schema {
   background-color: #fff;
-  border: 1px solid transparent;
+  border: 1px solid #ddd;
+  //border: 1px solid transparent;
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   padding-bottom: 10px;
   padding-top: 10px;
   display: block;
+  margin-top: 10px;
 }
 
 .box-schema .dndPlaceholder {
