--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -1,65 +1,67 @@
-<div class="box box-primary">
+<div class="">
     <div class="form-header with-border">
         <h3 class="box-title" ng-bind-html="schema.label"></h3>
     </div>
     <!-- /.box-header -->
     <!-- form start -->
-    <form name="{{schema.name}}" role="form" novalidate show-validation ng-submit="save()">
-        <div class="box-body padding-top">
-            <div class="alert alert-success" ng-show="success">
-                <strong>Success! </strong>{{message}}
-            </div>
-            <div class="alert alert-danger" ng-show="error">
-                <strong>Error! </strong>{{message}}
-            </div>
-            <div class="alert alert-info" ng-show="info">
-                <strong>Information! </strong>{{message}}
-            </div>
-            <div ng-repeat="section in schema.layout">
-                <h4 ng-bind-html="section.title"></h4>
-                <div class="{{row.cssClass}}" ng-repeat="row in section.rows">
-                    <div class="{{col.cssClass}}" ng-repeat="col in row.cols">
-                        <div class="" ng-repeat="field in col.fields">
-                            <div ng-if="field">
-                                <div class="form-group"
-                                     ng-class="{'has-error': {{schema.name}}.{{field.name}}.$invalid}">
+    <div ng-if="schema.layout.length !== 0">
+        <form name="{{schema.name}}" role="form" novalidate show-validation ng-submit="save()">
+            <div class="box-body padding-top">
+                <div class="alert alert-success" ng-show="success">
+                    <strong>Success! </strong>{{message}}
+                </div>
+                <div class="alert alert-danger" ng-show="error">
+                    <strong>Error! </strong>{{message}}
+                </div>
+                <div class="alert alert-info" ng-show="info">
+                    <strong>Information! </strong>{{message}}
+                </div>
+                <div ng-repeat="section in schema.layout">
+                    <h4 ng-bind-html="section.title"></h4>
+                    <div class="{{row.cssClass}}" ng-repeat="row in section.rows">
+                        <div class="{{col.cssClass}}" ng-repeat="col in row.cols">
+                            <div class="" ng-repeat="field in col.fields">
+                                <div ng-if="field">
+                                    <div class="form-group"
+                                         ng-class="{'has-error': {{schema.name}}.{{field.name}}.$invalid}">
 
-                                    <label class="control-label" for="{{field.name}}"
-                                           ng-hide="vm.hideTitle(field)">{{field.label}}&nbsp;</label>
+                                        <label class="control-label" for="{{field.name}}"
+                                               ng-hide="vm.hideTitle(field)">{{field.label}}&nbsp;</label>
 
-                                    <ng-include src="getFormFieldTemplate(field.type)"></ng-include>
+                                        <ng-include src="getFormFieldTemplate(field.type)"></ng-include>
 
-                                    <!--<div>-->
-                                    <!--<tt>field = {{field}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$valid = {{testForm.name.$valid}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$error = {{testForm.name.$error}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$valid = {{testForm.name.$valid}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$error = {{testForm.name.$error}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.$valid = {{testForm.$valid}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.$valid = {{testForm.$valid}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$error.required = {{!!testForm.name.$error.required}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$error.minlength = {{!!testForm.name.$error.minlength}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$error.maxlength = {{!!testForm.name.$error.maxlength}}</tt><br/>-->
-                                    <!--<tt>{{schema.name}}.{{field.name}}.$error.pattern = {{!!testForm.name.$error.pattern}}</tt><br/>-->
-                                    <!--</div>-->
+                                        <!--<div>-->
+                                        <!--<tt>field = {{field}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$valid = {{testForm.name.$valid}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$error = {{testForm.name.$error}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$valid = {{testForm.name.$valid}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$error = {{testForm.name.$error}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.$valid = {{testForm.$valid}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.$valid = {{testForm.$valid}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$error.required = {{!!testForm.name.$error.required}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$error.minlength = {{!!testForm.name.$error.minlength}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$error.maxlength = {{!!testForm.name.$error.maxlength}}</tt><br/>-->
+                                        <!--<tt>{{schema.name}}.{{field.name}}.$error.pattern = {{!!testForm.name.$error.pattern}}</tt><br/>-->
+                                        <!--</div>-->
 
-                                    <div ng-show="{{schema.name}}.{{field.name}}.$invalid">
-                                        <p class="help-block"
-                                           ng-show="{{schema.name}}.{{field.name}}.$error.required">
-                                            {{field.validation.messages.required}}
-                                        </p>
-                                        <p class="help-block"
-                                           ng-show="{{schema.name}}.{{field.name}}.$error.minlength">
-                                            {{field.validation.messages.minlength}}
-                                        </p>
-                                        <p class="help-block"
-                                           ng-show="{{schema.name}}.{{field.name}}.$error.maxlength">
-                                            {{field.validation.messages.maxlength}}
-                                        </p>
-                                        <p class="help-block"
-                                           ng-show="{{schema.name}}.{{field.name}}.$error.pattern">
-                                            {{field.validation.messages.pattern}}
-                                        </p>
+                                        <div ng-show="{{schema.name}}.{{field.name}}.$invalid">
+                                            <p class="help-block"
+                                               ng-show="{{schema.name}}.{{field.name}}.$error.required">
+                                                {{field.validation.messages.required}}
+                                            </p>
+                                            <p class="help-block"
+                                               ng-show="{{schema.name}}.{{field.name}}.$error.minlength">
+                                                {{field.validation.messages.minlength}}
+                                            </p>
+                                            <p class="help-block"
+                                               ng-show="{{schema.name}}.{{field.name}}.$error.maxlength">
+                                                {{field.validation.messages.maxlength}}
+                                            </p>
+                                            <p class="help-block"
+                                               ng-show="{{schema.name}}.{{field.name}}.$error.pattern">
+                                                {{field.validation.messages.pattern}}
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -67,14 +69,14 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="box-footer" ng-show="schema.handleSubmit">
-            <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="clear()">
-                <span class="fa fa-trash-o"></span>&nbsp;<span>Clear</span>
-            </button>
-            <button type="submit" ng-disabled="{{schema.name}}.$invalid" class="btn btn-primary">
-                <span class="fa fa-save"></span>&nbsp;<span>Save</span>
-            </button>
-        </div>
-    </form>
+            <div class="box-footer" ng-show="schema.handleSubmit">
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="clear()">
+                    <span class="fa fa-trash-o"></span>&nbsp;<span>Clear</span>
+                </button>
+                <button type="submit" ng-disabled="{{schema.name}}.$invalid" class="btn btn-primary">
+                    <span class="fa fa-save"></span>&nbsp;<span>Save</span>
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
