--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -62,6 +62,11 @@
 
 //Schema section
 
+.box-schema-area-empty-x {
+  font-size: 200px;
+  line-height: 200px;
+}
+
 .box-schema {
   background-color: #fff;
   border: 1px solid #ddd;
@@ -221,20 +226,20 @@
   border: 1px dashed #868686;
 }
 
-.tab-content {
-  border: 1px solid #ddd;
-  border-width: 0 1px 1px; /* Removes the top border */
-  //padding: 1px;
-}
-
-.nav-tabs > li {
-  float: left;
-}
-
-.nav-tabs > li > a {
-  margin-right: 0;
-  margin-left: 2px;
-}
+//.tab-content {
+//  border: 1px solid #ddd;
+//  border-width: 0 1px 1px; /* Removes the top border */
+//  //padding: 1px;
+//}
+//
+//.nav-tabs > li {
+//  float: left;
+//}
+//
+//.nav-tabs > li > a {
+//  margin-right: 0;
+//  margin-left: 2px;
+//}
 
 .jsonify {
   margin-top: 10px;
